<resources>
    <string name="app_name">SpaceTrader</string>
    <string name="action_settings">Settings</string>
    <string name="player_name">Name:</string>
    <string name="input_name">Enter name</string>
    <string name="difficulty_label">Set Difficulty</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="submit">Submit</string>




    <!--For police xml-->

    <string name="police_warning">YOU HAVE BEEN STOPPED BY THE POLICE!
                                \n Select an option below.</string>
    <string name="police_directions">
            \nIf you accept a cargo check, you must give up any illegal goods and pay a fine.
            \n\nIf you bribe, you must fork over 15% of your total credits.
            \n\nIf you flee, you will be deemed unlawful and will be stopped more often.
            \n</string>
    <string name="accept">Accept Cargo Check</string>
    <string name="bribe">Bribe</string>
    <string name="flee">Flee!</string>

    <!--for pirate xml-->

    <string name="pirate_warning">YOU HAVE BEEN ATTACKED BY PIRATES!
                                \n Select an option below.</string>
    <string name="pirate_directions">
        \nIf you surrender, the pirates will take all of your cargo.
        \n\nIf you fight, ensure that your fighter points exceed those of the pirates and fight to the death!
        \n\nIf you flee, ensure that your pilot points exceed those of the pirates and flee for your life!\n
    </string>

    <string name="surrender">Surrender</string>
    <string name="fight">Fight!</string>
    <string name="go">Go</string>

    <string name="total_price">Total Price:</string>
    <string name="quantity_to_buy">Quantity to buy</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="market_item">Market Item</string>
    <string name="current_planet">Current Planet:</string>
    <string name="credits_label">Credits:</string>
    <string name="ship_name_label">Ship Name:</string>


    <!--for planet activity xml-->
    <string name="fueltanklabel">\nShip Fuel Tank</string>
    <string name="current_fuel">Current Fuel:</string>
    <string name="max_ship_fuel">Max Ship Fuel:</string>
    <string name="fuel_to_buy">Fuel to buy</string>
    <string name="travel">Travel</string>
    <string name="cargo">Cargo</string>
    <string name="market">Market</string>
    <string name="refuel">Refuel</string>

    <!--Market Activity XML-->
    <string name="name">name</string>
    <string name="remaining_cargo">Remaining Cargo:</string>


    <!--for Config.xml-->
    <string name="set_skillpoints">Set Skillpoints</string>
    <string name="pilot">Pilot</string>
    <string name="fighter">Fighter</string>
    <string name="trader">Trader</string>
    <string name="engineer">Engineer</string>

    <!--for travel activity XML-->
    <string name="solar_system_map">Solar System Map</string>
    <string name="current_coordinates">current coordinates</string>
    <string name="travel_here">Travel here!</string>

    <!--for start activity XML-->
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>

    <string name="planet_map">Planet Map</string>


</resources>
