<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/warning_logo"
            android:layout_width="119dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/warning_sign"
            android:contentDescription="warning logo"/>

        <TextView
            android:id="@+id/intro_message_police"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/police_warning"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/directions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/police_directions"

            />

        <Button
            android:id="@+id/accept_check_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:background="@android:color/holo_red_dark"
            android:textColor="@android:color/white"
            />

        <Button
            android:id="@+id/bribe_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bribe"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/flee_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flee"
            android:background="@android:color/holo_green_dark"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>