<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
            <TextView
                android:id="@+id/player_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:labelFor="@+id/input_name"
                android:text="@string/player_name" />

            <EditText
                android:id="@+id/input_name"
                android:layout_width="137dp"
                android:layout_height="39dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="136dp"
                android:layout_marginBottom="8dp"
                android:importantForAutofill="no"
                android:inputType="text" />
    </LinearLayout>

        <TextView
            android:id="@+id/difficulty_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_label"
            />
        <Spinner
            android:id="@+id/difficulty_spinner"
            android:layout_width="395dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/set_skills_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set Skillpoints" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/pilot_skill_label"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="Pilot" />

            <Button
                android:id="@+id/add_pilot_skill_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:text="@string/plus" />
            <TextView
                android:id="@+id/pilot_skill_tracker"
                android:layout_width="36dp"
                android:layout_height="36dp" />

            <Button
                android:id="@+id/subtract_pilot_skill_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:text="@string/minus" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/fighter_skill_label"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="Fighter" />

            <Button
                android:id="@+id/add_fighter_skill_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:text="@string/plus" />

            <TextView
                android:id="@+id/fighter_skill_tracker"
                android:layout_width="36dp"
                android:layout_height="36dp" />
            <Button
                android:id="@+id/subtract_fighter_skill_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:text="@string/minus" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/trader_skill_label"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="Trader" />
            <Button
                android:id="@+id/add_trader_skill_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:text="@string/plus" />

            <TextView
                android:id="@+id/trader_skill_tracker"
                android:layout_width="36dp"
                android:layout_height="36dp" />
            <Button
                android:id="@+id/subtract_trader_skill_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:text="@string/minus" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/engineer_skill_label"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="Engineer" />
            <Button
                android:id="@+id/add_engineer_skill_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:text="@string/plus" />

            <TextView
                android:id="@+id/engineer_skill_tracker"
                android:layout_width="36dp"
                android:layout_height="36dp" />
            <Button
                android:id="@+id/subtract_engineer_skill_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:text="@string/minus" />
        </LinearLayout>
        <RelativeLayout android:id="@+id/RelativeLayout01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <Button
                android:id="@+id/submit_player_info_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:text="@string/submit"/>
        </RelativeLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
